Fixes issue with horizontal scroll bar

--- a/sources/webpack/src/index.scss
+++ b/sources/webpack/src/index.scss
@@ -7,3 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.row {
+  margin-left : 0;
+  margin-right : 0;
+}
